<package>

  <name>ls_calibration</name>
  <version>1.2.0</version>
  <description>
    Basic ROS support for the Leishen C16 LIDARs.
  </description>
  <maintainer email="jishu@lslidar.com">leo</maintainer>
  <author>leo</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>autoware_build_flags</run_depend>
  <run_depend>autoware_msgs</run_depend>
  <run_depend>calibration_camera_lidar</run_depend>
  <run_depend>glviewer</run_depend>
  <run_depend>rosinterface</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
